# go-libedit

./: BUILD.bazel
unix/: editline_unix.go
