load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/knz/go-libedit
gazelle(name = "gazelle")

go_library(
    name = "go-libedit",
    srcs = [
        "common.go",
        "editline_other.go",
        "version_check.go",
    ],
    importpath = "github.com/knz/go-libedit",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
    ] + select({
        "@io_bazel_rules_go//go/platform:aix": [
            "//other",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "//other",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//other",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//other",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//other",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "//other",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//other",
        ],
        "@io_bazel_rules_go//go/platform:js": [
            "//other",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//other",
        ],
        "@io_bazel_rules_go//go/platform:nacl": [
            "//other",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//other",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//other",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "//other",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//other",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//other",
        ],
        "//conditions:default": [],
    }),
)
